# NativeApp

./: .gitmodules  README.md  build.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bassmd/nativeapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/openssl/: configuration.h
app/src/main/java/com/bassmd/nativeapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
app/src/test/java/com/bassmd/nativeapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
